--- a/Pico_DDS/CMakeLists.txt
+++ b/Pico_DDS/CMakeLists.txt
@@ -47,7 +47,9 @@ pico_enable_stdio_usb(Pico_DDS 1)
 # Add the standard library to the build
 target_link_libraries(Pico_DDS
         pico_stdlib
-        hardware_spi)
+        hardware_spi
+        hardware_timer
+        hardware_irq)
 
 # Add the standard include files to the build
 target_include_directories(Pico_DDS PRIVATE
